Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123418

[Reg 6.6 -> 6.7] Q3DSurface and Q3DScatter crash in removeSeries

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.1, 6.7
    • 6.7.0 RC
    • Graphs: 3D
    • None
    • 067e75c38 (6.7)

    Description

      When removing a series from Q3DSurface and Q3DScatter in my unit tests the program crashes.

      The reason: 

      QQuickGraphsScatter does not do null pointer checks when doing this:

       

      deleteDataItem(graphModel->instancingRootItem);
      deleteDataItem(graphModel->selectionIndicator); 
      

      QQuickGraphsSurface does not do null pointer checks when doing this:

      m_model[i]->model->deleteLater();
      m_model[i]->gridModel->deleteLater();
      m_model[i]->proxyModel->deleteLater(); 

      Before 6.7 RC everything worked well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            oulu_hillbilly Sami Varanka
            docjambi Peter Droste
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes