Fix crashing surface and scatter removeseries

Add check for nullptr before calling deleteLater for the presenting
3D model.

Fixes: QTBUG-123418
Change-Id: I85963b97079d4f99fdc1ef4c7a84e88392d92acb
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>